--- a/basic-info.html
+++ b/basic-info.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI绘画负性评价原因探究 | 实验说明</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
@@ -89,8 +90,7 @@
     <script src="js/main.js"></script>
     <script>
         document.getElementById('start-experiment').addEventListener('click', function () {
-            // 跳转到实验页面
-            window.location.href = 'Information-Collection.html';
+            window.location.href = 'experiment.html'; // 跳转到实验页面
         });
     </script>
 </body>
