--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI绘画负性评价原因探究 | 欢迎</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
@@ -69,7 +70,7 @@
             localStorage.setItem('userData', JSON.stringify(userData));
 
             // 修改跳转到基本信息页面
-            window.location.href = 'basic-info.html';
+            window.location.href = 'Information-Collection.html';
         });
 
 
