--- a/Information-Collection.html
+++ b/Information-Collection.html
@@ -148,7 +148,7 @@
                 localStorage.setItem('userData', JSON.stringify(userData));
 
                 // 跳转到实验说明页面
-                window.location.href = 'experiment.html';
+                window.location.href = 'basic-info.html';
             });
 
             // 从localStorage预填表单(如果有保存的数据)
