--- a/basic-info.html
+++ b/basic-info.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI绘画负性评价原因探究 | 实验说明</title>
+    <title>绘画作品感知研究 | 实验说明</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="favicon.ico">
 </head>
@@ -21,7 +21,7 @@
 
         <section class="instructions-section">
             <h2>实验流程说明</h2>
-            <p>接下来，您将观看一系列图片并对其进行评分。整个实验分为若干组，每组包含5张图片。为确保实验效果，请专注并仔细遵循以下步骤：</p>
+            <p>接下来，您将观看若干绘画作品并对其进行感知和主观评价。这些作品来源多样。整个实验分为若干组。为确保实验效果，请专注并仔细遵循以下步骤：</p>
 
             <div class="instruction-steps">
                 <div class="step">
@@ -45,7 +45,7 @@
                     <div class="step-content">
                         <h3>评分阶段</h3>
                         <p>您将有15秒时间完成对图片的评分，请根据您的真实感受选择评分。</p>
-                        <p>评分完成后点击确认，或等待时间结束自动提交。</p>
+                        <p>评分完成后点击确认进行提交。</p>
                     </div>
                 </div>
 
@@ -69,10 +69,11 @@
             <div class="notice-box">
                 <h3>重要提示</h3>
                 <ul>
-                    <li>请在安静、不受干扰的环境中完成实验</li>
-                    <li>每张图片有固定的展示和评分时间，请合理分配时间</li>
-                    <li>请不要在实验过程中刷新页面或返回上一页</li>
-                    <li>完整参与实验至关重要，中途退出将导致数据无效</li>
+                    <li>请在安静、不受打扰的环境中完成实验，并确保注意力集中。</li>
+                    <li>实验过程中请勿刷新页面、切换标签或返回上一步，以避免数据丢失。</li>
+                    <li>每张图像和评分环节均设有时间限制，请在规定时间内完成操作。</li>
+                    <li>请尽量一次性完成实验，确保数据完整有效。</li>
+                    <li>所有数据将匿名处理，仅用于学术研究，您的隐私将被严格保护。</li>
                 </ul>
             </div>
 
@@ -83,7 +84,7 @@
         </section>
 
         <footer>
-            <p>© 2025 AI绘画研究项目组 | 如遇技术问题请刷新页面</p>
+            <p>© 2025 XX绘画研究项目组 | 如遇技术问题请刷新页面</p>
         </footer>
     </div>
 
